--- a/incognito/storyboard/Base.lproj/Main.storyboard
+++ b/incognito/storyboard/Base.lproj/Main.storyboard
@@ -709,7 +709,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rPM-fU-FwM"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Add" id="g4j-wm-cz5"/>
+                    <tabBarItem key="tabBarItem" title="Add" image="icons8-plus-math-30" selectedImage="icons8-plus-math-30" id="g4j-wm-cz5"/>
                     <connections>
                         <outlet property="MyCollection" destination="lPq-2M-Lke" id="TWM-zN-T2N"/>
                         <outlet property="addressLabel" destination="nrV-QM-TgN" id="eLh-hG-zfB"/>
@@ -732,8 +732,8 @@
                     <connections>
                         <segue destination="7dD-zq-AV0" kind="relationship" relationship="viewControllers" id="sDs-yh-OjD"/>
                         <segue destination="uYz-u2-Qss" kind="relationship" relationship="viewControllers" id="Ek3-yW-js6"/>
-                        <segue destination="eX6-F2-bzV" kind="relationship" relationship="viewControllers" id="alJ-fp-zQz"/>
                         <segue destination="GI7-pQ-eVV" kind="relationship" relationship="viewControllers" id="lLL-FS-K7g"/>
+                        <segue destination="eX6-F2-bzV" kind="relationship" relationship="viewControllers" id="alJ-fp-zQz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9rm-4t-QPs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1132,7 +1132,7 @@
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="GUz-GC-ieS"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" landscapeImage="settings" selectedImage="settings-1" id="8Xr-Ud-Leq">
+                    <tabBarItem key="tabBarItem" title="Settings" image="icons8-settings-30" selectedImage="icons8-settings-30" id="8Xr-Ud-Leq">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <toolbarItems/>
@@ -1165,7 +1165,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Nhq-6r-dPJ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" id="hKM-9e-WNx"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="icons8-anonymous-mask-30" selectedImage="icons8-anonymous-mask-30" id="hKM-9e-WNx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="efG-1V-ILw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1175,7 +1175,7 @@
         <scene sceneID="Uwz-hf-VNv">
             <objects>
                 <navigationController title="Discover" automaticallyAdjustsScrollViewInsets="NO" id="7dD-zq-AV0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Discover" id="FdT-Ey-BUv"/>
+                    <tabBarItem key="tabBarItem" title="Discover" image="icons8-home-30" selectedImage="icons8-home-30" id="FdT-Ey-BUv"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backIndicatorImage="Rectangle9" id="EK7-8i-Vfs">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1210,14 +1210,17 @@
         <image name="back_shadow" width="304" height="218"/>
         <image name="comment_icon" width="14" height="14"/>
         <image name="icon2" width="600" height="600"/>
+        <image name="icons8-anonymous-mask-30" width="30" height="30"/>
+        <image name="icons8-home-30" width="30" height="30"/>
+        <image name="icons8-plus-math-30" width="30" height="30"/>
+        <image name="icons8-settings-30" width="30" height="30"/>
         <image name="like_icon" width="15" height="15"/>
-        <image name="settings" width="1600" height="1600"/>
-        <image name="settings-1" width="64" height="64"/>
         <image name="stroke" width="10" height="20"/>
         <image name="wallpaper" width="640" height="1136"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3mC-eT-NRS"/>
+        <segue reference="Ek3-yW-js6"/>
+        <segue reference="G46-JA-RMv"/>
         <segue reference="wjO-qC-Z7y"/>
         <segue reference="nbg-eP-0CS"/>
     </inferredMetricsTieBreakers>
